--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>Angular 2 CRUD Project (RC1)</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
